--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Tutorial"
-permalink: /tutorial/
+title: "Tutorials"
+permalink: /tutorials/
 author_profile: true
 ---
 
